--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
                         <div id="loading" class="d-none spinner-border text-danger"></div>
 
-                        <span id="status" class="ms-3"></span>
+                        <span id="status" class="ms-3 fee-info"></span>
 
                     </div>
 
