--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
                     </div>
 
                     <div class="d-flex flex-column mb-3">
-                        <p class="m-0"><span class="s pointer font-family-size-medium"><span id="hive" class="qt token">0</span> <span class="sym font-family-size-medium">HIVE</span></span></p>
+                        <p class="m-0"><span class="s pointer font-family-size-medium"><span id="hive" class="qt token">0</span> <span class="sym font-family-size-medium req-info">HIVE</span></span></p>
                         
-                        <p class="m-0"><span class="s pointer font-family-size-medium"><span id="swaphive" class="qt token">0</span> <span class="sym font-family-size-medium">SWAP.HIVE</span></span></p>
+                        <p class="m-0"><span class="s pointer font-family-size-medium"><span id="swaphive" class="qt token">0</span> <span class="sym font-family-size-medium req-info">SWAP.HIVE</span></span></p>
                         
-                        <p class="m-0"><span class="s pointer font-family-size-medium"><span id="vault" class="qt token">0</span> <span class="sym font-family-size-medium">VAULT</span></span></p>
+                        <p class="m-0"><span class="s pointer font-family-size-medium"><span id="vault" class="qt token">0</span> <span class="sym font-family-size-medium req-info">VAULT</span></span></p>
                     </div>
 
                     <hr>
