--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 220 190">
 
-                                    <defs><style>.cls-1{fill:#421e00;}</style></defs>
+                                    <defs class="cls-1"></defs>
 
                                     <title>hive-logo</title>
 
