--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="css/main-black.css">
-
-        <link rel="stylesheet" href="css/main-brown.css">
-
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/@hiveio/hive-js/dist/hive.min.js"></script>
@@ -37,11 +32,33 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-        <script src="js/main.js"></script>
+        <script src="js/main.js"></script> 
+        <style>
+            body {
+            visibility: hidden;
+            }
+        </style>
+        <link rel="stylesheet" href="css/main-black.css">
+        <link rel="stylesheet" href="css/main-brown.css">
+        <script>
+            $(window).on("load", function() {
+            // Check local storage for saved theme
+                if (localStorage.getItem("theme") === "brown") {
+                    $("link[href='css/main-black.css']").prop("disabled", true);
+                    $("link[href='css/main-brown.css']").prop("disabled", false);
+                } else {
+                    $("link[href='css/main-black.css']").prop("disabled", false);
+                    $("link[href='css/main-brown.css']").prop("disabled", true);
+                }
+                // Show body and logo
+                $("body").css("visibility", "visible");
+                $("#logo").show();
+            });
+        </script>  
 
     </head>
 
-    <body>
+    <body>        
 
     <div class="modal fade" id="authqr" data-bs-backdrop="static" data-bs-keyboard="true">
 
@@ -100,9 +117,7 @@
                 </button>
             </div>
             </div>
-        </div>
-        
-      
+        </div>     
 
         <div class="mbody mt-0 d-flex justify-content-center">
 
