--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
 
     <body>
         
-    <div class="bottom-bar">        
+    <div class="bottom-bar">
+        <div class="developed-by-container">
+            <p>Developed by <a class="alih-color" href="https://peakd.com/@ali-h" target="_blank">@ali-h</a> & <a class="theguruasia-color" href="https://peakd.com/@theguruasia" target="_blank">@theguruasia</a></p>
+        </div>          
         <div class="theme-buttons-container"> 
                 <p class="m-0 themes-color">Theme: </p>           
                 <button type="button" id="changeThemeBlack" class="btn text-light rounded-pill pointer">
