--- a/index.html
+++ b/index.html
@@ -64,11 +64,14 @@
             <p>Developed by <a class="alih-color" href="https://peakd.com/@ali-h" target="_blank">@ali-h</a> & <a class="theguruasia-color" href="https://peakd.com/@theguruasia" target="_blank">@theguruasia</a></p>
         </div>  
         <div class="popup-by-container">
-            <span class="popup-by-container-text">Hive API Node : </span>
-            <button id="popup-button-hive" class="popup-link" value="https://anyx.io">https://anyx.io</button>
-            <span class="popup-by-container-text">&nbsp;</span>
-            <span class="popup-by-container-text">Engine API Node : </span>
-            <button id="popup-button-engine" class="popup-link" value="https://engine.rishipanthee.com/">https://engine.rishipanthee.com</button>
+            <div>
+                <span class="popup-by-container-text">Hive API Node : </span>
+                <button id="popup-button-hive" class="popup-link" value="https://anyx.io">https://anyx.io</button>
+            </div>
+            <div>            
+                <span class="popup-by-container-text">Engine API Node : </span>
+                <button id="popup-button-engine" class="popup-link" value="https://engine.rishipanthee.com/">https://engine.rishipanthee.com</button>
+            </div>
         </div>       
         <div class="theme-buttons-container"> 
                 <p class="m-0 themes-color">Theme: </p>           
