--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
         <div class="developed-by-container">
             <p>Developed by <a class="alih-color" href="https://peakd.com/@ali-h" target="_blank">@ali-h</a> & <a class="theguruasia-color" href="https://peakd.com/@theguruasia" target="_blank">@theguruasia</a></p>
         </div>  
-        <div class="popup-by-container">
+        <div class="popup-by-container-hive">
             <div>
                 <span class="popup-by-container-text">Hive API Node : </span>
                 <button id="popup-button-hive" class="popup-link" value="https://anyx.io">https://anyx.io</button>
             </div>
+        </div>
+        <div class="popup-by-container-engine">
             <div>            
                 <span class="popup-by-container-text">Engine API Node : </span>
                 <button id="popup-button-engine" class="popup-link" value="https://engine.rishipanthee.com/">https://engine.rishipanthee.com</button>
