--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
                     <div class="d-flex align-items-center mb-3">
 
-                        <p class="font-family-size-large m-0">Hive History</p>
+                        <p class="font-family-size-large m-0">HIVE History</p>
 
                         <button type="button" class="refreshHistory btn-sm btn-danger ms-3 rounded-pill btn-refresh">Refresh</button>
 
