--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
     <body>
         
     <div class="bottom-bar">
-        <div class="developed-by-container">
+        <div class="developed-by-container font-family-size-small-medium">
             <p>Developed by <a class="alih-color" href="https://peakd.com/@ali-h" target="_blank">@ali-h</a> & <a class="theguruasia-color" href="https://peakd.com/@theguruasia" target="_blank">@theguruasia</a></p>
         </div>  
-        <div class="popup-by-container-hive">
+        <div class="popup-by-container-hive font-family-size-small-medium">
             <div>
                 <span class="popup-by-container-text">Hive API Node : </span>
                 <button id="popup-button-hive" class="popup-link" value="https://anyx.io">https://anyx.io</button>
             </div>
         </div>
-        <div class="popup-by-container-engine">
+        <div class="popup-by-container-engine font-family-size-small-medium">
             <div>            
                 <span class="popup-by-container-text">Engine API Node : </span>
                 <button id="popup-button-engine" class="popup-link" value="https://engine.rishipanthee.com/">https://engine.rishipanthee.com</button>
             </div>
         </div>       
-        <div class="theme-buttons-container"> 
+        <div class="theme-buttons-container font-family-size-small-medium"> 
                 <p class="m-0 themes-color">Theme: </p>           
                 <button type="button" id="changeThemeBlack" class="btn text-light rounded-pill pointer">
                     <svg class="svg-dark-color" id="dark" fill="currentColor" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
