--- a/index.html
+++ b/index.html
@@ -187,30 +187,32 @@
                         <p class="m-0 font-family-size-small-medium"><span class="span-font-color">VAULT : 0% fee</p>
                     </div>
 
-                    <div class="mt-3 d-flex">
-                        <div class="d-flex flex-column box f alignclass">    
-                            <a class="link-lightv2 font-family-size-small-medium" href="https://kswap.app/" target="_blank">    
-                                <span style="vertical-align: middle;">Use Kswap Bridge (Fee [<span class="fee-data">-0.25%</span>] to [<span class="fee-data">0.45%</span>]) for Dynamic Fees & Rewards!&nbsp;</span>    
-                                <svg style="vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">    
-                                    <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>    
-                                    <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>    
-                                </svg>    
-                            </a>    
-                            <div id="bridge" class="d-flex d-none alignclass">    
-                                <div class="d-flex flex-column align-items-center alignclass">    
-                                    <span class="font-family-size-small-medium font-family-size-small-medium-color">HIVE</span>    
-                                    <span id="hive_liq" class="font-family-size-small-medium medium-text-info">0</span>    
-                                </div>    
-                                <span class="font-family-size-small-medium ms-3 me-3">    
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-right" viewBox="0 0 16 16">    
-                                        <path fill-rule="evenodd" d="M1 11.5a.5.5 0 0 0 .5.5h11.793l-3.147 3.146a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 11H1.5a.5.5 0 0 0-.5.5zm14-7a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H14.5a.5.5 0 0 1 .5.5z"/>    
+                    <div class="mt-2 d-flex">
+                        <div class="mt-0 d-flex justify-content-center">
+                            <div class="d-flex flex-column box f alignclass">    
+                                <a class="link-lightv2 font-family-size-small-medium" href="https://kswap.app/" target="_blank">    
+                                    <span style="vertical-align: middle;">Use Kswap Bridge (Fee [<span class="fee-data">-0.25%</span>] to [<span class="fee-data">0.45%</span>]) for Dynamic Fees & Rewards!&nbsp;</span>    
+                                    <svg style="vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">    
+                                        <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>    
+                                        <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>    
                                     </svg>    
-                                </span>    
-                                <div class="d-flex flex-column align-items-center alignclass">    
-                                    <span class="font-family-size-small-medium font-family-size-small-medium-color">SWAP.HIVE</span>    
-                                    <span id="swap_liq" class="font-family-size-small-medium medium-text-info">0</span>    
+                                </a>    
+                                <div id="bridge" class="d-flex d-none alignclass">    
+                                    <div class="d-flex flex-column align-items-center alignclass">    
+                                        <span class="font-family-size-small-medium font-family-size-small-medium-color">HIVE</span>    
+                                        <span id="hive_liq" class="font-family-size-small-medium medium-text-info">0</span>    
+                                    </div>    
+                                    <span class="font-family-size-small-medium ms-3 me-3">    
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-right" viewBox="0 0 16 16">    
+                                            <path fill-rule="evenodd" d="M1 11.5a.5.5 0 0 0 .5.5h11.793l-3.147 3.146a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 11H1.5a.5.5 0 0 0-.5.5zm14-7a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H14.5a.5.5 0 0 1 .5.5z"/>    
+                                        </svg>    
+                                    </span>    
+                                    <div class="d-flex flex-column align-items-center alignclass">    
+                                        <span class="font-family-size-small-medium font-family-size-small-medium-color">SWAP.HIVE</span>    
+                                        <span id="swap_liq" class="font-family-size-small-medium medium-text-info">0</span>    
+                                    </div>    
                                 </div>    
-                            </div>    
+                            </div>
                         </div>    
                     </div>
                 </div>
