--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <meta name="coinzilla" content="2aea27a279506282ff64222e4a4d5abb" />
+
         <title>Swap Hive</title>
 
         <link rel="manifest" crossorigin="use-credentials" href="/manifest.json" />
