--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="d-flex align-items-center justify-content-center">
                 <img id="logo" src="assets/icons/icon-144x144.png" style="display:none;">
                 <div class="p-3 m-0">
-                    <p class="font-family-size-large m-0 c font-heading-color">SWAP HIVE</p>
+                    <p class="font-family-size-medium-large m-0 c font-heading-color">SWAP HIVE</p>
                     <p class="m-0">Discounted Bridge</p>
                 </div>            
             </div>
@@ -172,7 +172,7 @@
                     <div class="d-flex flex-column mb-2">
                         <p class="m-0"><span class="s pointer font-family-size-medium"><span id="hive" class="qt token">0</span> <span class="sym font-family-size-medium req-info">HIVE</span></span></p>
                         <p class="m-0"><span class="s pointer font-family-size-medium"><span id="swaphive" class="qt token">0</span> <span class="sym font-family-size-medium req-info">SWAP.HIVE</span></span></p>                        
-                        <p class="m-0"><span class="s pointer font-family-size-medium"><span id="vault" class="qt token">0</span> <span class="sym font-family-size-medium req-info">VAULT</span></span></p>
+                        <!--<p class="m-0"><span class="s pointer font-family-size-medium"><span id="vault" class="qt token">0</span> <span class="sym font-family-size-medium req-info">VAULT</span></span></p>-->
                     </div>
 
                     <hr>
@@ -185,15 +185,16 @@
                             </svg>
                             <span class="font-family-size-medium-large fee-info">Fee Info</span>
                         </p>
-                        <p class="m-0 font-family-size-small-medium"><span class="span-font-color">HIVE & SWAP.HIVE : 0.1% fee with 10% refund to VAULT</span></p>
-                        <p class="m-0 font-family-size-small-medium"><span class="span-font-color">VAULT : 0% fee</p>
+                        <p class="m-0 font-family-size-small-medium"><span class="span-font-color"><span class="span-font-color-one">First 15% Fill</span> : <span class="medium-text-info">0.37%</span> Reward HIVE / SWAP.HIVE & <span class="medium-text-info">0.01%</span> Reward VAULT</span></p>
+                        <p class="m-0 font-family-size-small-medium"><span class="span-font-color"><span class="span-font-color-one">Next 65% Fill</span> : <span class="medium-text-info">0.1%</span> Fee HIVE / SWAP.HIVE & <span class="medium-text-info">0.01%</span> Reward VAULT</span></p> 
+                        <p class="m-0 font-family-size-small-medium"><span class="span-font-color"><span class="span-font-color-one">Last 20% Fill</span> : <span class="medium-text-info">0.4%</span> Fee HIVE / SWAP.HIVE & <span class="medium-text-info">0.01%</span> Reward VAULT</span></p>                       
                     </div>
 
                     <div class="mt-2 d-flex">
                         <div class="mt-0 d-flex justify-content-center">
                             <div class="d-flex flex-column box f alignclass">    
                                 <a class="link-lightv2 font-family-size-small-medium" href="https://kswap.app/" target="_blank">    
-                                    <span style="vertical-align: middle;">Use Kswap Bridge (Fee [<span class="fee-data">-0.28%</span>] to [<span class="fee-data">0.42%</span>]) for Dynamic Fees & Rewards!&nbsp;</span>    
+                                    <span style="vertical-align: middle;">Use Kswap Bridge (Fee [<span class="fee-data">-0.35%</span>] to [<span class="fee-data">0.35%</span>]) for Dynamic Fees & Rewards!&nbsp;</span>    
                                     <svg style="vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">    
                                         <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>    
                                         <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>    
@@ -237,7 +238,7 @@
                                 <select id="input" class="form-select form-select-lg input select-change option-value-color" style="width: initial;">
                                     <option value="HIVE">HIVE</option>
                                     <option value="SWAP.HIVE">SWAP.HIVE</option>
-                                    <option value="VAULT">VAULT</option>
+                                    <!--<option value="VAULT">VAULT</option>-->
                                 </select>
                             </div>
                         </div>
@@ -263,16 +264,33 @@
                         </div>
                     </div>
                     <div class="d-flex">
-                        <p class="mt-2 mb-0 font-family-size-medium">Conversion Fee: <span id="fee" class="medium-text-info">0</span>&nbsp;<span id="feeticker" class="medium-text-info-changed">HIVE</span></p>
+                        <p class="mt-2 mb-0 font-family-size-small-medium">Conversion Fee: <span id="fee" class="medium-text-info">0</span>&nbsp;<span id="feeticker" class="medium-text-info-changed">HIVE</span></p>
                     </div>
                     <div class="mt-0 mb-0">
-                        <span class="font-family-size-medium">Reward: </span>
-                        <span id="vaultreward" class="font-family-size-medium medium-text-info">0</span>&nbsp;<span class="font-family-size-medium medium-text-info-changed">VAULT</span>
+                        <span class="font-family-size-small-medium">Reward: </span>
+                        <span id="vaultreward" class="font-family-size-small-medium medium-text-info">0</span>&nbsp;<span class="font-family-size-small-medium medium-text-info-changed">VAULT</span>
                         <div class="d-none" id="rewarddiv">
-                            <span class="font-family-size-medium">&</span>
-                            <span id="reward" class="font-family-size-medium medium-text-info">0</span>&nbsp;<span id="rewardticker" class="font-family-size-medium medium-text-info-changed">HIVE</span>
+                            <span class="font-family-size-small-medium">&</span>
+                            <span id="reward" class="font-family-size-small-medium medium-text-info">0</span>&nbsp;<span id="rewardticker" class="font-family-size-small-medium medium-text-info-changed">HIVE</span>
                         </div>
                     </div>
+
+                    <div class="d-flex heading-group">
+                        <p class="mt-2 font-family-size-medium slippage-scale">Select Your Max Fee</p>
+                    </div>
+
+                    <div class="d-flex r-button-flex">
+                        <div class="button-group">
+                            <label class="radio-label font-family-size-small-medium"><input type="radio" name="my-radio-group" value="0.0"><span>0.0%</span></label>  
+                            <label class="radio-label font-family-size-small-medium"><input type="radio" name="my-radio-group" value="0.1"><span>0.1%</span></label>                           
+                            <label class="radio-label font-family-size-small-medium"><input type="radio" name="my-radio-group" value="0.4" checked><span>0.4%</span></label>
+                        </div>
+                    </div>
+
+                    <div class="d-flex receive-group">
+                        <p class="mt-0 mb-0 font-family-size-small-medium">Minimum To Receive: <span id="slipageqty" class="medium-text-info font-family-size-small-medium">0.000</span>&nbsp;<span id="minreceivesymbol" class="medium-text-info-changed font-family-size-small-medium">SWAP.HIVE</span></p>
+                    </div>
+
                     <div class="mt-3 d-flex align-items-center justify-content-center mb-3">
                         <div class="d-flex align-items-center box rounded-3 flex-wrap justify-content-center me-2 custom-box">
                             <input class="form-check-input pointer d-none" type="radio" name="txtype" id="txtype" value="Hive Keychain" disabled>
@@ -322,7 +340,7 @@
 
                     <div class="d-flex flex-column mb-0">
                         <p class="font-family-size-medium">Provide Liquidity and Earn Rewards!</p>
-                        <p class="font-family-size-small-medium liquidity">You can provide <span class="fee">15%</span> Liquidity on the lower side of the bridge to earn <span class="fee">0.075%</span> instant rewards and free swaps!</p>
+                        <p class="font-family-size-small-medium liquidity">You can provide <span class="fee">15%</span> Liquidity on the lower side of the bridge to earn <span class="fee">0.37%</span> instant rewards and free swaps!</p>
                         <p class="font-family-size-small-medium s pointer m-0"><span id="reqhive" class="qt fee">0</span> <span class="sym req-info">HIVE</span> Required</p>
                         <p class="font-family-size-small-medium s pointer m-0"><span id="reqswaphive" class="qt fee">0</span> <span class="sym req-info">SWAP.HIVE</span> Required</p> 
                         <hr>
