--- a/index.html
+++ b/index.html
@@ -128,6 +128,26 @@
         </button>
     </div>
 
+    <div class="popup-msg-bar" style="display: none;">
+        <div class="secure-fee-notification">
+            <p class="popup-msg-bar-important">Important Update</p>
+            <p>To ensure the bridge liquidity during this special Hive market situation, we have implemented the following adjustments:</p>
+            <ul>
+                <li>Added an additional 0.1% fee for the lowest side of the bridge if it falls below 20% of the total.</li>
+                <li>Increased the reward by 0.1% until the lowest side of the bridge reaches 15%.</li>
+            </ul>
+            <p>Please be aware of these temporary changes. Thank you for your understanding.</p>
+            <a href="https://discord.com/invite/XYMrvyr" target="_blank" class="contact-msg-link">
+                Contact for more details <svg class="discord-msg-color" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"></path>
+                </svg>
+            </a>
+        </div>
+        <div class="center-close-button">
+            <button id="closepopupmsg" class="popup-msg-close-button">I Understood Fee Changes</button>
+        </div>
+    </div>    
+
     <div class="modal fade" id="authqr" data-bs-backdrop="static" data-bs-keyboard="true">
         <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content d-flex rounded-3 bg">
@@ -145,6 +165,8 @@
             </div>
         </div>
     </div>
+
+    
 
     </div>       
         <div class="m-0 mt-2 mb-2" style="position: relative;">
@@ -170,9 +192,9 @@
                     </div>
 
                     <div class="d-flex flex-column mb-2">
-                        <p class="m-0"><span class="s pointer font-family-size-medium"><span id="hive" class="qt token">0</span> <span class="sym font-family-size-medium req-info">HIVE</span></span></p>
-                        <p class="m-0"><span class="s pointer font-family-size-medium"><span id="swaphive" class="qt token">0</span> <span class="sym font-family-size-medium req-info">SWAP.HIVE</span></span></p>                        
-                        <!--<p class="m-0"><span class="s pointer font-family-size-medium"><span id="vault" class="qt token">0</span> <span class="sym font-family-size-medium req-info">VAULT</span></span></p>-->
+                        <p class="m-0"><span class="s pointer font-family-size-small-medium"><span id="hive" class="qt token">0</span> <span class="sym font-family-size-small-medium req-info">HIVE</span></span></p>
+                        <p class="m-0"><span class="s pointer font-family-size-small-medium"><span id="swaphive" class="qt token">0</span> <span class="sym font-family-size-small-medium req-info">SWAP.HIVE</span></span></p>                        
+                        <p class="m-0"><span class="pointer font-family-size-small-medium"><span id="vault" class="qt token">0</span> <span class="font-family-size-small-medium req-info">VAULT</span></span></p>
                     </div>
 
                     <hr>
@@ -286,9 +308,22 @@
                         </div>
                     </div>
 
-                    <div class="d-flex receive-group">
+                    <div class="receive-group">
                         <p class="mt-0 mb-0 font-family-size-small-medium">Minimum To Receive: <span id="slipageqty" class="medium-text-info font-family-size-small-medium">0.000</span>&nbsp;<span id="minreceivesymbol" class="medium-text-info-changed font-family-size-small-medium">SWAP.HIVE</span></p>
+                        &nbsp;
+                        <div class="d-none" id="securefeestatus">
+                            <span class="font-family-size-small-medium span-font-color">(Additional Fee: </span>&nbsp;
+                            <span id="securefeeinfo" class="medium-text-info font-family-size-small-medium">0.0%</span>
+                            <span class="font-family-size-small-medium span-font-color">)</span>
+                        </div>
                     </div>
+                    
+                    <!--
+                    <div class="d-flex receive-group">
+                        <p class="mt-0 mb-0 font-family-size-small-medium">Minimum To Receive: <span id="slipageqty" class="medium-text-info font-family-size-small-medium">0.000</span>&nbsp;<span id="minreceivesymbol" class="medium-text-info-changed font-family-size-small-medium">SWAP.HIVE</span>
+                            &nbsp;<span class="secure-fee-display font-family-size-small-medium">(Secure Fee : </span><span id="securefeeinfo" class="secure-fee-display medium-text-info font-family-size-small-medium">0.0%</span><span class="secure-fee-display font-family-size-small-medium">)</span></p>
+                    </div>
+                    -->
 
                     <div class="mt-3 d-flex align-items-center justify-content-center mb-3">
                         <div class="d-flex align-items-center box rounded-3 flex-wrap justify-content-center me-2 custom-box">
